<resources>
    <string name="app_name">Xpress Sewa</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="cheapest_way">This is the cheapest way to send money</string>
    <string name="get_started">Get Started</string>
    <string name="aud">AUD</string>
    <string name="your_email">Enter Your Email</string>
    <string name="national_id_card_doc_">National ID card document number</string>
    <string name="sign_in">LOG IN</string>
    <string name="forgot_pwd_">Forgot Password</string>
    <string name="password">Enter Your Password</string>
    <string name="password_char">Enter Your Password(Min 8 character Required)</string>
    <string name="password_char_new">Enter new Password(Min 8 character Required)</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="forgotpin">Forgot PIN</string>
    <string name="otp">Enter OTP</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="forgot_pwd_exl">Forgot Password</string>
    <string name="or">Or log in with</string>
    <string name="have_no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="business_profile">Business Profile</string>
    <string name="by_continuing">By continuing you accept our Terms of use and Privacy Policy</string>
    <string name="terms_of_use"> Terms of use</string>
    <string name="activity">Activity </string>
    <string name="account">Account </string>
    <string name="send">Send </string>
    <string name="account_type">Account type</string>
    <string name="reviewyourtransfer">Confirm details</string>
    <string name="transferdetail">Transfer details</string>
    <string name="youare_sending">You are sending</string>
    <string name="userget">username gets</string>
    <string name="rateguranteed">Guaranteed rate</string>
    <string name="totalfee">Totalfee</string>
    <string name="recipients">Recipients</string>
    <string name="invite">Invite</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="verification_pending">Verification Pending</string>
    <string name="activity_send_money">Send money, get paid &amp; spend abroad up to 8x cheaper than with a bank</string>
    <string name="find_out_how_it_works">Find out how it works</string>
    <string name="create_account">Create an account</string>
    <string name="changepassword">Change Password</string>
    <string name="createnewpassword">Create new password</string>
    <string name="have_any_question">Have any question</string>
    <string name="faq">FAQs</string>
    <string name="who_is_this_account_for">Who is this account for?</string>
    <string name="my_profile"> My Profile</string>
    <string name="refer_and_earn_message">Earn a reward of $100 for every 3 friends who transfer over a $500</string>
    <string name="learn_more">Learn More</string>
    <string name="invite_friends">Invite A Friends</string>
    <string name="copy_link">Copy My Invite Link</string>
    <string name="send_money">Send Money</string>
    <string name="i_sent">I send</string>
    <string name="recepient_receive">Receipient receive</string>
    <string name="see_more">See more</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="referandEarn">Refer &amp; Earn</string>
    <string name="total_fees">Total fees</string>
    <string name="price_comparison">Price Comparison</string>
    <string name="amount_convert">Amount we will convert</string>
    <string name="rate">Rate</string>
    <string name="send_transfer"></string>
    <string name="they_received">They Received:</string>
    <string name="Price">Price</string>
    <string name="confirmation_your_identity">Confirmation your identity</string>
    <string name="next">Next</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="open_camera">Open Camera</string>
    <string name="notifications">Notifications</string>
    <string name="please_describe">Please Describe your problem</string>
    <string name="message">Message</string>
    <string name="have_you_read">Have you read our FAQ yet ?</string>
    <string name="add_screenshot"> Add screenshot (optional)</string>
    <string name="cheapest_way_to_send">This is a cheapest way to send</string>
    <string name="here_below_is_list">here below is list</string>
    <string name="edit_profile">Edit Your Account</string>
    <string name="add_a_business">Add a business</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="get_your_business_set_up">Let\'s get your business set up</string>
    <string name="take_few_minutes">It\'s only take few minutes. You\'ll need to:</string>
    <string name="tell_us_about_your_business">  Tell us about your Business</string>
    <string name="tell_us_about_you"> Tell us about you</string>
    <string name="continue_">Continue</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="zipcode">Post code</string>
    <string name="type_of_company"> Type of company</string>
    <string name="please_note_we_cannot_offer">  Please note we cannot offer services to trust or \n charities from the selected country</string>
    <string name="what_does_your_business_do">What does your business do?</string>
    <string name="company_category">Company category</string>
    <string name="company_subcategory">Company subcategory</string>
    <string name="business_do_notes">By clicking continue, you confirm you are an authorized representative of transfer money and have authorization to make payments on behalf of transfer money</string>
    <string name="save_and_continue">Save and continue</string>
    <string name="save">Save</string>
    <string name="verification">Verification</string>
    <string name="Verifying">Verifying….</string>
    <string name="we_are_confirming_your_details">We\'re confirming your details.</string>
    <string name="verification_note">We confirm all our customers account details. This helps keep everyones money safe</string>
    <string name="verifying_note">We\'re confirming your details.</string>
    <string name="tell_us_what_you_are">Tell us what you\'re using TransferWise for</string>
    <string name="please_select_an_option"> Please select an option from the list below.</string>
    <string name="account_purpose">Account Purpose</string>
    <string name="confirm_your_identity"> Confirm your identity</string>
    <string name="national_id_card">National ID Card </string>
    <string name="passport">Passport</string>
    <string name="drivers_licence">Driver\'s Licence  </string>
    <string name="upload_national_id_card">Upload a photo or scan of your national ID card.</string>
    <string name="upload_driver_licence">  Upload a photo or scan of your Driver\'s Licence.</string>
    <string name="upload_passport">Upload a photo or scan of your passport.</string>
    <string name="upload_front_national_id">Upload the front side of your national ID card.</string>
    <string name="upload_back_national_id">Upload the back side of your national ID card.</string>
    <string name="upload_front_passport">Upload the front side of your passport.</string>
    <string name="upload_back_passport">Upload the back side of your passport.</string>
    <string name="upload_front_driver_license">Upload the front side of your Driver\'s Licence.</string>
    <string name="upload_back_driver_license">Upload the back side of your Driver\'s Licence</string>
    <string name="your_documents_updated">Your documents have been uploded</string>
    <string name="someone_from_our_team">Someone from our team will check them over and if they\'re good to go.</string>
    <string name="done">Done</string>
    <string name="who_are_the_business_owners"> Who are the Business Owners?</string>
    <string name="i_am_the_only_owner">I am the only owner</string>
    <string name="there_are_other_owners">There are other owners</string>
    <string name="who_are_the_business_directors"> Who are the Business directors?</string>
    <string name="i_am_the_only_director"> I am the only director</string>
    <string name="there_are_other_director">  There are other directors</string>
    <string name="no_one_else_directly">No-one else directly or indirectly controls more than 25% of my company</string>
    <string name="first_name">First name<font color='#FF0000'>*</font></string>
    <string name="last_name">Last name *</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country_of_residence">Country of residence</string>
    <string name="name">Name</string>
    <string name="fullname">Full name</string>
    <string name="accountholdername">Account holder name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="submit">Submit</string>
    <string name="registermsg">For email verification an email has been send to your register address.</string>
    <string name="selectImage">Add Screen Short</string>
    <string name="getStarted">Get Started</string>
    <string name="countryname">Country</string>
    <string name="typeofcomapnay">Type of company</string>
    <string name="profilecontent">Please note,we do not offer services to trust or charties from the selected country</string>
    <string name="buisnessdetail">Enter your buisness details</string>
    <string name="business_name"> Business name</string>
    <string name="nameof_buisness">Name of Business</string>
    <string name="company_role">Company role</string>
    <string name="registration_number"> Registration number</string>
    <string name="website"> Website (Optional)</string>
    <string name="business_address"> Business address</string>
    <string name="city">  City</string>
    <string name="post_code">Post code</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_country">Select country</string>
    <string name="allcurrency">All Currency</string>
    <string name="personal_or_buisness">Personal</string>
    <string name="enter_personal">Personal Details</string>
    <string name="businesstype">Buisness Type</string>
    <string name="country_code">Code</string>
    <string name="mobile">Mobile</string>
    <string name="youraddress">Your Address</string>
    <string name="confirm">Confirm</string>
    <string name="login">Sign In</string>
    <string name="whoare_you_sending">Who are you sending to?</string>
    <string name="add_recipent">Recipients</string>
    <string name="select_recipent">Select Recipients</string>
    <string name="add_first_recipient">Add recipients, and send money anywhere in the world</string>
    <string name="earnandinvite">Earn 100 INR by inviting your friend to Entremit</string>
    <string name="add_a_recipient">Add a Recipient</string>
    <string name="add_recipient">Add Recipient</string>
    <string name="myself">Myself</string>
    <string name="some_one_else">Other person</string>
    <string name="recipientType">Myself</string>
    <string name="yourcurrency">Your Currency</string>
    <string name="bankdetail">Your bank details</string>
    <string name="buisness_profile">A business</string>
    <string name="forgottonpassword">Reset Your password</string>
    <string name="reset">Reset Password</string>
    <string name="forgotpasswordtext">We will send you an email that will allow you to change your password.</string>
    <string name="enter_email">Enter your registered email address</string>
</resources>