<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/menu_activity"
    android:icon="@drawable/activity_icon"
    android:title="@string/activity"/>

<item
    android:id="@+id/menu_account"
    android:icon="@drawable/account_icon"
    android:title="@string/account"/>

<item

    android:id="@+id/menu_send"
    android:icon="@drawable/send_icon"
    android:title="@string/send"/>

    <item
        android:id="@+id/menu_recipients"
        android:icon="@drawable/recipents_icon"
        android:iconTint="@color/blue_bt_color"
        android:title="@string/recipients"/>


    <item

        android:id="@+id/menu_support"
        android:icon="@drawable/help_icon"
        android:title="@string/support"/>



</menu>