<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rr_forgotmain"
    android:background="@color/toolbar_background"
    tools:context=".registration.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include layout="@layout/toolbar_with_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarlayout"
            android:id="@+id/ll_sec"
            android:background="@color/white_color"
            android:orientation="vertical">


            <TextView

                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:id="@+id/createpin"
                style="@style/black18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|left"
                android:text="@string/forgottonpassword"
                android:textStyle="bold"
                ></TextView>

            <TextView
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/forgotpasswordtext"
                android:textSize="13dp"
                android:gravity="center|left"
                android:textColor="@color/black_color"
                ></TextView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp"
                android:id="@+id/email_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:maxLength="70"
                    android:id="@+id/et_email"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:id="@+id/tv_submit"
                style="@style/button_style"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/reset" />



            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/margin_20"
                android:gravity="center_horizontal"
                android:layout_gravity="bottom"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_no_account"
                    android:textColor="@color/white_50"
                    android:textSize="@dimen/font_fifteen" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:text="@string/sign_up"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/font_fifteen" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <!--   </ScrollView>-->

</RelativeLayout>