<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_20"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/margin_25"
        android:text="@string/verification"
        android:textColor="@color/title_black_color"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_50"
            android:src="@drawable/setting"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_twelve"
            android:textSize="@dimen/font_sixteen"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:text="@string/verification_note"
            />

        <TextView

            android:id="@+id/verification_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white_color"
            android:textSize="@dimen/font_eighteen"
            android:layout_marginTop="@dimen/margin_35"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_35"
            android:layout_marginRight="@dimen/margin_30"
            style="@style/button_style"
            android:padding="@dimen/margin_15"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/continue_"
            />
    </LinearLayout>

</LinearLayout>