<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/margin_25"
            android:layout_margin="@dimen/margin_20"
            android:text="@string/tell_us_what_you_are"
            android:textColor="@color/title_black_color"
            />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey_color"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_20"
    android:text="@string/please_select_an_option"
    android:paddingBottom="@dimen/margin_10"
    android:paddingTop="@dimen/margin_10"
    android:textColor="@color/dark_grey_color"
    />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="vertical">

       <!--     <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/margin_15"

                android:background="@color/light_grey_color" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_purpose_layout_name"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_account_purpose"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/account_purpose"
                    />
            </com.google.android.material.textfield.TextInputLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>



        </LinearLayout>

        <TextView

            android:id="@+id/tell_us_what_you_are_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white_color"
            android:textSize="@dimen/font_eighteen"
            android:layout_marginTop="@dimen/margin_35"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginRight="@dimen/margin_30"
            style="@style/button_style"
            android:padding="@dimen/margin_15"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/continue_"
            />

    </LinearLayout>
</LinearLayout>